# uvu-scripts

./: pyproject.toml  setup.cfg
server/ubuntu/: global_setup.sh  local_setup.sh
src/: gocli.py  here.py
