[tool.poetry]
name = "core"
version = "0.1.0"
description = ""
authors = ["Muammar Al-Shedivat <muammar.alshedivat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

requests = "^2.25.1"
click = "^7.0"

[tool.poetry.extras]

[tool.poetry.dev-dependencies]
# Lint
pre-commit = "^2.9.3"
flake8 = "^3.8.4"
autoflake = "^1.4"
black = "^20.8b1"
isort = "^5.6.3"
toml = "^0.10.0"

# Testing
unittest-xml-reporting = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
